# storm

./: CMakeLists.txt  Makefile  Makefile.avx2  Makefile.avx2.icc  Makefile.avx512bw.icc  Makefile.sse  Makefile.sse.icc  Makefile.sse2  Makefile.sse2.icc  Makefile.win32.sse2  Makefile.win64.sse2  README  alignment.c  alignment.h  alignment_simd.c  alignment_simd.h  codes.c  codes.h  doxygenconfig  genome_map.c  genome_map.h  hit_map.c  hit_map.h  index.c  index.h  load_data.c  load_data.h  main.c  read_quality.c  read_quality.h  reads_data.c  reads_data.h  reference_data.c  reference_data.h  run.c  run.h  seed.c  seed.h  stats.c  stats.h  (+2 more)
seeds/: README  seeds_lossless-1-14.in  seeds_lossless-2-07.in  seeds_lossless-2-08.in  seeds_lossy-1-10.in  seeds_lossy-1-12.in  seeds_lossy-2-10.in  seeds_lossy_3.in  solexa.lossy.3  solid.lossy.3
